[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Harmim <harmim6@gmail.com>"]
description = "Advent of Code 2022 (Rust)"
readme = "README.md"
repository = "https://github.com/harmim/aoc-2022"
license = "MIT"
keywords = ["rust", "advent-of-code", "puzzle", "christmas", "advent-of-code-2022"]

[dependencies]
regex = "~1"
